--- a/smb215/res/menu/main.xml
+++ b/smb215/res/menu/main.xml
@@ -1,9 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
+    <item
+        android:id="@+id/action_add"
+        android:showAsAction="always"
+        android:icon="@android:drawable/ic_menu_add"
+        android:title="@string/action_add"/>    
+ 
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
+        android:showAsAction="ifRoom"
+        android:icon="@android:drawable/ic_menu_preferences"
         android:title="@string/action_settings"/>
-
 </menu>
