--- a/smb215/res/layout/activity_chat.xml
+++ b/smb215/res/layout/activity_chat.xml
@@ -5,7 +5,7 @@
 		android:background="@android:color/darker_gray" >
 		
 		<fragment 
-			android:name="com.appsrox.instachat.MessagesFragment"
+			android:name="com.example.projetsmb215.MessagesFragment"
 			android:id="@+id/msg_list"
 			android:layout_width="match_parent"
 			android:layout_height="0dip"
