--- a/smb215/res/layout/main.xml
+++ b/smb215/res/layout/main.xml
@@ -12,5 +12,13 @@
         android:id="@+id/display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+        <TextView
+        android:id="@+id/options_clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+         <TextView
+        android:id="@+id/options_exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
