--- a/smb215/res/xml/pref_messaging.xml
+++ b/smb215/res/xml/pref_messaging.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
      
-    <EditTextPreference
+   <!-- <EditTextPreference
         android:inputType="textPassword"
         android:key="server_url_pref"
         android:title="@string/pref_title_server_url" />
@@ -9,7 +9,8 @@
     <EditTextPreference
         android:inputType="textPassword"
         android:key="sender_id_pref"
-        android:title="@string/pref_title_sender_id" />
+        android:title="@string/pref_title_sender_id" /> --> 
+    
      
 </PreferenceScreen>
                     
