--- a/smb215/res/menu/options_menu.xml
+++ b/smb215/res/menu/options_menu.xml
@@ -1,13 +1,14 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item
-        android:id="@+id/action_add"
-        android:showAsAction="always"
-        android:icon="@android:drawable/ic_menu_add"
-        android:title="@string/action_add"/>    
- 
-    <item
-        android:id="@+id/action_settings"
+<?xml version="1.0" encoding="UTF-8"?>
+    <menu xmlns:android="http://schemas.android.com/apk/res/android">
+                <item
+        android:id="@+id/options_clear"
         android:showAsAction="ifRoom"
         android:icon="@android:drawable/ic_menu_preferences"
         android:title="@string/action_settings"/>
-</menu>
+        
+            <item
+        android:id="@+id/options_exit"
+        android:showAsAction="ifRoom"
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:title="@string/action_settings"/>
+    </menu>
