--- a/smb215/res/layout/main.xml
+++ b/smb215/res/layout/main.xml
@@ -11,14 +11,8 @@
     <TextView
         android:id="@+id/display"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-        <TextView
-        android:id="@+id/options_clear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-         <TextView
-        android:id="@+id/options_exit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" 
+          android:title="Hello"/>
+
 
 </RelativeLayout>
